stateless/k8s/token-exchange/jobs/envoy-config/alex-envoy.yaml
node:
  id: "frontend-2"
  cluster: "demo-cluster-spire"
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: outbound_proxy
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          common_http_protocol_options:
            idle_timeout: 5s
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: outbound_proxy
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: sts
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: spire_agent
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /run/spire/agent-sockets/spire-agent.sock
  - name: sts
    connect_timeout: 5s
    type: strict_dns
    load_assignment:
      cluster_name: sts
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sts
                port_value: 8443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: "spiffe://example.org/ns/default/sa/default/frontend-2"
            sds_config:
              resource_api_version: V3
              api_config_source:
                api_type: GRPC
                transport_api_version: V3
                grpc_services:
                  envoy_grpc:
                    cluster_name: spire_agent
          combined_validation_context:
            default_validation_context:
              match_typed_subject_alt_names:
              - san_type: URI
                matcher:
                  exact: "spiffe://example.org/ns/default/sa/default/sts"
            validation_context_sds_secret_config:
              name: "spiffe://example.org"
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
